# rusty_fold

./: Cargo.toml  tsconfig.json
js/: task_viewer.ts  types.ts
src/: geom.rs  js_types.rs  main.rs  mesh.rs  prelude.rs  problem.rs  task.rs  util.rs
static/: problem_viewer.html  task_viewer.html
ts/: problem_viewer.ts  task_viewer.ts  types.ts
tyndex/: Cargo.toml
tyndex/src/: lib.rs
