[package]
name = "rusty_fold"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linkme = "*"
num-rational = "*"
num-bigint = "*"
num-traits = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
cov-mark = "*"
