[package]
name = "rusty_fold"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "tyndex"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linkme = "*"
num-rational = "*"
num-bigint = "*"
num-traits = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
cov-mark = "*"
tyndex = { path = "tyndex", features = ["serde"] }

[profile.dev.package."*"]
debug = false
[profile.dev.build-override]
debug = false

[profile.release]
panic = "abort"
incremental = true
